// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div
  className="test"
  onBlur={[Function]}
  onFocus={[Function]}
  tabIndex="-1"
>
  <div>
    <Component />
    <Component
      onClick={[Function]}
    />
  </div>
  <span
    className="divider"
  />
  <svg
    aria-labelledby="expand"
    className="expand"
    viewBox="0 0 16 8"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4 4L0 0 8 0 16 0 12 4 8 8 4 4Z"
    />
  </svg>
</div>
`;

exports[`renders disabled 1`] = `
<div
  className="test"
  onBlur={[Function]}
  onFocus={[Function]}
  tabIndex="false"
>
  <div>
    <Component />
    <Component
      onClick={[Function]}
    />
  </div>
  <span
    className="divider"
  />
  <svg
    aria-labelledby="expand"
    className="expand"
    viewBox="0 0 16 8"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4 4L0 0 8 0 16 0 12 4 8 8 4 4Z"
    />
  </svg>
</div>
`;
